--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,10 @@ hr {
     width: 100%;
   }
 }
+
+#welcome {
+  max-width: fit-content;
+  margin-left: auto;
+  margin-right: auto;
+  padding-top: 40px;
+}
